# grbf

./: Makefile.am  README.md  TODO  config.h  configure.ac  grbf.pc  grbf.pc.in  libtool  log
doc/: grbf.dxy
doc/html/: dir_4eeb864c4eec08c7d6b9d3b0352cfdde.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  formula.repository  group__cardinal.html  group__interp.html  group__weights.html  index.html  modules.html
examples/Heaving/: wing.llt
examples/Pitching/: wing.llt
examples/Propeller/: apc-prop.llt
examples/Wing/: wing.llt
octave/: efitc.m
src/: Makefile.am  cardinal.c  cardinal.lo  convolve.c  convolve.lo  doxy.txt  grbf-private.h  grbf.c  grbf.h  grbf.lo  libgrbf.la  librvpm.la  libsub.la  libsub_la-cardinal.lo  libsub_la-convolve.lo  libsub_la-grbf.lo
src/.deps/: cardinal.Plo  convolve.Plo  grbf.Plo  kernel.Plo  libsub_la-cardinal.Plo  libsub_la-convolve.Plo  libsub_la-grbf.Plo  rvpm.Plo  solver.Plo
src/.libs/: libgrbf-1.0.so.0  libgrbf-1.0.so.0.0.0  libgrbf.la  libgrbf.lai
tests/: octave-workspace
tools/: Makefile.am  grbf-test  grbf-test-float  grbf-test-float.c  grbf-test.c  grbf-test.c.in  make-source  make-source-float  rvpm-test
tools/.deps/: grbf-test-float.Po  grbf-test.Po  rvpm-test.Po
